
[package]
name = "nexcore-circulatory"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
description = "Circulatory system for data transport — Heart(pump/collect/distribute) → Vessels(route) → Blood(carry/detect/repair)"

[dependencies]
nexcore-chrono = { workspace = true }
nexcore-lex-primitiva = { version = "0.1.0", path = "../nexcore-lex-primitiva", registry = "nexcore" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }

[lints]
workspace = true
